@@ -18,7 +18,9 @@ bug fixes (and other actions) for each version of hwloc since version
 
 Version 2.2.0
 -------------
-* Remove support for Intel Xeon Phi (MIC, Knights Corner) co-processors.
+* Backends
+  + Add support for Linux cgroups v2.
+  + Remove support for Intel Xeon Phi (MIC, Knights Corner) co-processors.
 
 
 Version 2.1.0
